# rummylatro

./: CMakeLists.txt  Card.h  Deck.h  Hand.h  Player.h  README.md  compile_commands.json  main  main.cpp  test.cpp
.cache/clangd/index/: Card.cpp.4A1B9126E3AFB85B.idx  Card.cpp.87AAC8CDAA39866B.idx  Card.h.5588CDB358498C98.idx  Card.hpp.96327B96B2A835D3.idx  Card.hpp.C7001103ABC41D41.idx  Deck.h.3CF0C0C2B95C4852.idx  Deck.hpp.022FD31D2B390D5B.idx  Deck.hpp.6B960BED69E996C2.idx  GCard.hpp.60FBA84CEECEC82A.idx  GCard.hpp.E264E6CEA0EA30D8.idx  Player.h.BCAB1B9EE21AE38D.idx  Player.hpp.49F1DB6E1B40464D.idx  Player.hpp.B355164E0433BEFA.idx  main.cpp.102B9484AC5F9353.idx  main.cpp.88B7A1F614A36C53.idx
docs/: card.md  graphics.md
graphics_test/: comandos  compose_textures.cpp  sfml_test  sfml_test-1.cpp  sfml_test-2.cpp  sfml_test.cpp
include/: Card.h  Card.hpp  Deck.hpp  GCard.hpp  GDeck.hpp  GRack.hpp  Player.h  Player.hpp
src/: Card.cpp  Card.h  GCard.cpp  GCard.h  main  main.cpp
test/: comp_prompt
test/graphic/: compose_textures.cpp  debug_comp_tex.cpp  sfml_test  test
test/logic/: compilation_commands  test  test.cpp
